--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.38.0",
     "date-fns": "^2.30.0",
     "js-cookie": "^3.0.0",
+    "lucide-react": "^0.554.0",
     "next": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
