--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,41 +1,25 @@
 {
-  "name": "FMGE Planner - Study Dashboard",
-  "short_name": "FMGE Planner",
-  "description": "Interactive FMGE exam study planner with MCQ tracking, progress analytics, and wellness monitoring.",
-  "start_url": "/",
+  "name": "FMGE Planner",
+  "short_name": "Planner",
+  "description": "Study planner for FMGE with cloud sync",
+  "start_url": "/planner",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#11131c",
   "theme_color": "#2352a1",
-  "scope": "/",
+  "orientation": "portrait-primary",
   "icons": [
     {
       "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "/screenshot-1.png",
-      "sizes": "540x720",
-      "type": "image/png"
-    }
-  ],
-  "categories": ["education", "productivity"],
-  "shortcuts": [
-    {
-      "name": "View Dashboard",
-      "short_name": "Dashboard",
-      "description": "Open FMGE Planner dashboard",
-      "url": "/",
-      "icons": [{ "src": "/icon-96.png", "sizes": "96x96" }]
+      "purpose": "any"
     }
   ]
 }
