--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.0",
+    "@vercel/analytics": "^1.5.0",
     "date-fns": "^2.30.0",
     "js-cookie": "^3.0.0",
     "lucide-react": "^0.554.0",
