--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,21 @@
 {
-  "name": "FMGE Planner",
-  "short_name": "Planner",
-  "description": "Study planner for FMGE with cloud sync",
-  "start_url": "/planner",
-  "scope": "/",
+  "name": "FMGE Horizon",
+  "short_name": "FMGE Horizon",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#11131c",
-  "theme_color": "#2352a1",
-  "orientation": "portrait-primary",
+  "background_color": "#0f111a",
+  "theme_color": "#43ea8f",
+  "description": "Your complete FMGE prep platform",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/icon-192.jpg",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/jpeg"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/icon-512.jpg",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/jpeg"
     }
   ]
 }
